renamed to boggart (fixes #11)
